# sb3_app

./: .dockerignore  Dockerfile  docker-compose.yml  local.env  new_sb3.db  pyproject.toml
.github/workflows/: deploy.yaml
sb3_api/: analyze.py  app.py  collect.py  dependencies.py  encoder.py  graph.py  main.py  new_sb3.db  router.py  sb3.db  settings.py  test_database.py
sb3_api/agent/: base_agent.py  context_agent.py  conversation_manager.py  llm.py  sql_agent.py
sb3_api/agent/callbacks/: llm_tracker.py  recursion_tracker.py
sb3_api/agent/middlewares/: guardrails.py  recursion_middleware.py  response_format.py  stage_tagging.py
sb3_api/agent/prompts/: prompts.py  prompts.yaml
sb3_api/agent/session/: dynamodb_session_manager.py
sb3_api/agent/tools/: factory.py  partial_results.py  sql.py  sql_adaptor.py
sb3_api/auth/: auth.py
sb3_api/config/: llm.py  logging.py
sb3_api/controller/: chat_controller.py
sb3_api/controller/utils/: message_dto_mapper.py  message_dto_mapper_1.py
sb3_api/enums/: document.py  encoder.py  environment.py  evaluation.py  model.py  search.py  tables.py  trace.py
sb3_api/exceptions/: exception_handlers.py  exceptions.py
sb3_api/loaders/: s3_loader.py
sb3_api/models/: constants.py  feedback.py  input.py  knowledge_base.py  message_dto.py  overall.py  persona.py  query.py  response.py  session.py  session_dto.py
sb3_api/profiling/: profiler.py
sb3_api/repository/agent/: base.py  (+3 more)
sb3_api/routes/: auth.py  chat.py  feedback.py  knowledge_base.py  sessions.py
sb3_api/stores/: feedback_store.py
sb3_api/utils/: utils.py
(+18 files in other folders)
